@@ -111,6 +111,10 @@ Current Bugs to Fix
 
 Changes up to 0.85
 
+   * fixed get_dihedral to use current state index
+
+   * revamped smooth command and added documentation
+
    * added some nasty code to handle quotes and apostrophes in atom selections
      so that nucleic acids and sugars with apostrophes will work right while
      you can also still explicitly use apostrophes or quotes
